--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -120,8 +120,7 @@
 	color: lib.$text;
 	transition: background-color 450ms, color 600ms, width 450ms, box-shadow 400ms;
 	&:hover {
-		background-color: lib.$highlight_pale;
-		// box-shadow: lib.$neon_glow_weak;
+		background-color: lib.$highlight;
 		color: lib.$text_inverted;
 		width: 95%;
 		cursor: pointer;
