--- a/components/SectionButton.module.scss
+++ b/components/SectionButton.module.scss
@@ -53,7 +53,8 @@
 		transition: opacity 600ms;
 		opacity: 0;
 	}
-	&:hover {
+	&:hover,
+	&:focus {
 		// background-color: rgba(lib.$neon_values, 0.1);
 		stroke: lib.$text_inverted;
 		border: 1px solid rgba(255, 255, 255, 1);
