--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -9,6 +9,9 @@ body {
 body * {
 	font-family: 'Roboto Slab', serif;
 	box-sizing: border-box;
+	&:focus{
+		outline: none;
+	}
 }
 a {
 	text-decoration: none;
