--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -1,14 +1,16 @@
 html {
 	scroll-behavior: smooth;
-	-ms-overflow-style: none; /* Internet Explorer 10+ */
-	scrollbar-width: none; /* Firefox */
-	::-webkit-scrollbar {
-		width: 0; /* Remove scrollbar space */
-		background: transparent; /* Optional: just make scrollbar invisible */
+	&.noScrollBar {
+		ms-overflow-style: none; /* Internet Explorer 10+ */
+		scrollbar-width: none; /* Firefox */
+		::-webkit-scrollbar {
+			width: 0; /* Remove scrollbar space */
+			background: transparent; /* Optional: just make scrollbar invisible */
+		}
 	}
-}
-html.locked {
-	overflow: hidden;
+	&.locked {
+		overflow: hidden;
+	}
 }
 
 body {
