--- a/components/Skills.module.scss
+++ b/components/Skills.module.scss
@@ -22,7 +22,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	padding-top: 2.5em;
+	// justify-content: center;
 	// width: fit-content;
 }
 .scrollContainer {
