--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -8,7 +8,8 @@ html {
 			background: transparent; /* Optional: just make scrollbar invisible */
 		}
 	}
-	&.locked {
+	&.locked,
+	&.navLocked {
 		overflow: hidden;
 	}
 }
