--- a/components/NavBar.module.scss
+++ b/components/NavBar.module.scss
@@ -14,6 +14,10 @@
 	align-content: center;
 	z-index: 3;
 }
+.navList {
+	display: flex;
+	flex-direction: row;
+}
 .sectionHeader {
 	background-color: rgba(lib.$background, 0.45);
 	padding: 10px 20px;
@@ -76,39 +80,160 @@
 			background-color: lib.$background_inverted;
 		}
 	}
-	&:hover .sectionHeader {
-		border-radius: 10px 10px 0 0;
-		color: lib.$text_inverted;
-		background-color: lib.$background_inverted;
-		cursor: pointer;
-		.dropdownContainer {
-			transform: rotate(-180deg);
-			filter: brightness(0) invert(0);
+	&:hover,
+	&:focus-within {
+		.sectionHeader {
+			border-radius: 10px 10px 0 0;
+			color: lib.$text_inverted;
+			background-color: lib.$background_inverted;
+			cursor: pointer;
+			.dropdownContainer {
+				transform: rotate(-180deg);
+				filter: brightness(0) invert(0);
+			}
 		}
 	}
-	&:hover .sectionList {
-		&:hover {
-			cursor: pointer;
-		}
-		color: lib.$text_inverted;
-		opacity: 1;
-		background-color: lib.$background_inverted;
-		transform: scaleY(1);
-		.sectionListItem {
-			padding-bottom: 10px;
+	&:hover,
+	&:focus-within {
+		.sectionList {
 			&:hover {
-				text-decoration-color: rgba(lib.$text_inverted, 1);
+				cursor: pointer;
+			}
+			color: lib.$text_inverted;
+			opacity: 1;
+			background-color: lib.$background_inverted;
+			transform: scaleY(1);
+			.sectionListItem {
+				padding-bottom: 10px;
+				&:hover {
+					text-decoration-color: rgba(lib.$text_inverted, 1);
+				}
 			}
 		}
 	}
 }
+.mobileExpandContainer {
+	display: none;
+}
 @media only screen and (max-width: 1000px) {
-	.list li {
-		font-size: 10vw;
-		margin-left: 15px;
-	}
 	.root {
 		width: 100vw;
+	}
+	.navList {
 		display: none;
+		flex-direction: column;
+	}
+	.navItem {
+		margin-left: 0;
+		&:hover,
+		&:focus-within {
+			.sectionList {
+				.sectionListItem {
+					color: lib.$text_inverted;
+				}
+				background-color: lib.$background_inverted;
+			}
+			.sectionListContainer {
+				height: auto;
+				transform: scaleY(1);
+			}
+			.sectionListItem {
+				padding-bottom: 10px;
+				&:hover {
+					text-decoration-color: rgba(lib.$text_inverted, 1);
+				}
+			}
+		}
+	}
+	.sectionList {
+		position: relative;
+	}
+	.sectionListContainer {
+		height: 0;
+		transform: scaleY(0);
+	}
+	.sectionHeader {
+		padding: 1em 2em;
+		background-color: transparent;
+	}
+	.root.expanded {
+		background-color: rgba(0, 0, 0, 0.9);
+		.list {
+			height: 100vh;
+			.mobileExpandContainer {
+				margin-top: 0.5em;
+				align-self: flex-start;
+			}
+			.navListContainer {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+			}
+			.navList {
+				margin-top: 5em;
+				display: flex;
+				width: fit-content;
+			}
+		}
+	}
+
+	.mobileExpandContainer {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-left: auto;
+		margin-right: 3em;
+	}
+	.mobileExpand {
+		height: 3em;
+		width: 3em;
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		* {
+			transform: rotate(90deg);
+			transition: 0.5s;
+			opacity: 1;
+		}
+		& > :nth-child(1) {
+			margin-bottom: 1.25em;
+		}
+		& > :nth-child(2) {
+		}
+		& > :nth-child(3) {
+			margin-top: 1.25em;
+		}
+		&.expanded {
+			* {
+				margin: 0;
+			}
+			& > :nth-child(1) {
+				transform: rotate(45deg);
+			}
+			& > :nth-child(2) {
+				opacity: 0;
+			}
+			& > :nth-child(3) {
+				transform: rotate(-45deg);
+			}
+		}
+	}
+	.burgerLine {
+		filter: brightness(0) invert(1);
+		aspect-ratio: 1;
+		height: 2.5em;
+		position: absolute;
+	}
+}
+@media only screen and (max-width: 650px) {
+	.mobileExpandContainer {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-left: auto;
+		margin-right: 1.5em;
 	}
 }
