line height adjustments

--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -166,6 +166,9 @@
 		width: 92vw;
 		margin-bottom: 0.9375rem;
 	}
+	.title {
+		line-height: 3rem;
+	}
 	.contentContainer {
 		grid-column: span 1;
 	}
