--- a/components/SectionButton.module.scss
+++ b/components/SectionButton.module.scss
@@ -1,4 +1,5 @@
-@use 'library' as lib;
+@use 'library'as lib;
+
 .root {
 	position: absolute;
 	width: 100%;
@@ -9,7 +10,9 @@
 	align-items: center;
 	bottom: calc(min(20%, 50px));
 	margin-top: 15px;
+	user-select: none;
 }
+
 .button {
 	color: lib.$text;
 	padding: 20px 25px;
@@ -26,6 +29,7 @@
 	text-shadow: 0 0 3px rgba(lib.$text_inverted, 0);
 	border: 1px solid rgba(255, 255, 255, 0);
 	transition: 0.4s;
+
 	.dropdownContainer {
 		display: flex;
 		flex-direction: row;
@@ -38,10 +42,12 @@
 		transform: rotate(-90deg);
 		transition: 0.6s;
 	}
+
 	p {
 		margin-right: 20px;
 		text-shadow: none;
 	}
+
 	&::before {
 		border-radius: 20px;
 		position: absolute;
@@ -53,6 +59,7 @@
 		transition: opacity 600ms;
 		opacity: 0;
 	}
+
 	&:hover,
 	&:focus {
 		// background-color: rgba(lib.$neon_values, 0.1);
@@ -60,15 +67,18 @@
 		border: 1px solid rgba(255, 255, 255, 1);
 		// text-shadow:
 		cursor: pointer;
+
 		&::before {
 			opacity: 1;
 		}
+
 		.dropdownContainer {
 			filter: brightness(0) invert(1);
 			transform: rotate(0deg);
 		}
 	}
 }
+
 @media only screen and (max-width: 1250px) {
 	.dropdownContainer {
 		transform: rotate(0);
@@ -76,11 +86,13 @@
 		width: 1.4rem;
 	}
 }
+
 @media only screen and (max-width: 1000px) {
 	.dropdownContainer {
 		height: 1.2rem;
 		width: 1.2rem;
 	}
+
 	.button {
 		font-size: 2.6rem;
 	}
