--- a/components/Skills.module.scss
+++ b/components/Skills.module.scss
@@ -1,20 +1,25 @@
-@use 'library' as lib;
+@use 'library'as lib;
+
 @keyframes verticalMove {
 	0% {
 		transform: translateY(0%);
 	}
+
 	100% {
 		transform: translateY(20%);
 	}
 }
+
 .root {
 	min-height: 100vh;
 	position: relative;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 	color: lib.$text;
 	font-size: 3vw;
 }
+
 .skillWindow {
 	display: grid;
 	grid-template-columns: 1fr 70% 2fr;
@@ -23,9 +28,9 @@
 	height: 65%;
 	min-width: 90%;
 	max-width: 90%;
-	padding-bottom: 100px;
 	flex-shrink: 1;
 }
+
 .selector {
 	display: flex;
 	flex-direction: column;
@@ -34,6 +39,7 @@
 	// justify-content: center;
 	// width: fit-content;
 }
+
 .scrollContainer {
 	padding: 0.35em 0.65em;
 	height: min(min(5.5vw, 110px), 100%);
@@ -45,20 +51,25 @@
 	&:hover {
 		cursor: pointer;
 	}
+
 	&.inactive {
 		opacity: 0;
+
 		&:hover {
 			cursor: default;
 		}
 	}
+
 	&:first-of-type {
 		transform: rotate(180deg);
 		margin-bottom: 0.1em;
 	}
+
 	&:last-of-type {
 		margin-top: 0.1em;
 	}
 }
+
 .scroll {
 	display: flex;
 	align-items: center;
@@ -68,6 +79,7 @@
 	aspect-ratio: 1;
 	animation: verticalMove 0.85s infinite alternate;
 }
+
 .selectorItemContainer {
 	padding: 0.35em 0.65em;
 	background-color: transparent;
@@ -75,20 +87,24 @@
 	align-items: center;
 	justify-content: center;
 	transition: all 0.5s, border-radius 0s;
+
 	&.first {
 		border-top-left-radius: 1rem;
 		border-top: 1px;
 	}
+
 	&.last {
 		border-bottom-left-radius: 1rem;
 		transition: 0;
 	}
+
 	&.last,
 	&.first {
 		&.active {
 			transition: all 0.5s, border-radius 0s, background-color 0s, box-shadow 0s;
 		}
 	}
+
 	&:hover,
 	&:focus,
 	&.active {
@@ -97,6 +113,7 @@
 		box-shadow: lib.$neon_glow_weak;
 	}
 }
+
 .selectorItem {
 	display: flex;
 	align-items: center;
@@ -105,18 +122,22 @@
 	aspect-ratio: 1;
 	filter: brightness(0) invert(1);
 }
+
 .contentSection {
 	padding: 1em 1.5em;
 }
+
 .titleContainer {
 	margin-bottom: min(1.2em, 60px);
 }
+
 .title {
 	font-size: min(3.2em, 130px);
 	transition: 0.5s;
 	color: lib.$text;
 	text-decoration: underline;
 	text-decoration-color: rgba(lib.$highlight, 0);
+
 	&:hover,
 	&:focus {
 		text-decoration-color: rgba(lib.$highlight, 1);
@@ -125,47 +146,57 @@
 		cursor: pointer;
 	}
 }
+
 .description {
 	font-size: min(1.4em, 50px);
+
 	p {
 		margin-bottom: 0.9em;
 		overflow-wrap: break-word;
 		line-height: 1.15em;
 	}
+
 	a {
 		color: lib.$text;
 		text-decoration: underline;
 		transition: 350ms;
+
 		&:hover,
 		&:focus {
 			color: lib.$neon;
 		}
 	}
+
 	span {
 		text-shadow: lib.$neon_glow;
 	}
 }
+
 @media screen and (max-width: 1000px) {
 	.skillWindow {
 		grid-template-columns: 5fr 70% 1fr;
 		padding-top: 150px;
-		padding-bottom: 50px;
 	}
+
 	.selectorItem {
 		height: min(11.5vw, 110px);
 	}
+
 	.description {
 		font-size: 1.45em;
 	}
 }
+
 @media screen and (max-width: 750px) {
 	.selectorItem {
 		height: min(12vw, 110px);
 	}
+
 	.description {
 		font-size: 1.55em;
 	}
 }
+
 @media screen and (min-width: 750px) {
 	.selector {
 		padding-top: 0;
