--- a/components/SectionButton.module.scss
+++ b/components/SectionButton.module.scss
@@ -1,15 +1,16 @@
 @use 'library'as lib;
 
 .root {
-	position: absolute;
+	position: relative;
 	width: 100%;
-	left: 0;
+	bottom: 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
 	align-items: center;
-	bottom: calc(min(20%, 50px));
-	margin-top: 15px;
+	justify-self: flex-end;
+	margin-top: auto;
+	margin-bottom: 25px;
 	user-select: none;
 }
 
@@ -21,7 +22,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	position: absolute;
+	// position: absolute;
 	background-color: transparent;
 	box-shadow: 0 0 0 0 transparent;
 	box-sizing: border-box;
