text block progress

--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -3,5 +3,8 @@
 .root {
 	background-color: lib.$background;
 	min-height: 100vh;
+	padding-top: 100px;
+	padding-right: 2%;
+	padding-left: 2%;
 	color: white;
 }
