--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -8,3 +8,12 @@
 	padding-left: 2%;
 	color: white;
 }
+.root a {
+	color: lib.$text;
+	transition: 350ms;
+
+	&:hover,
+	&:focus {
+		color: lib.$neon;
+	}
+}
