--- a/components/TextBlock.module.scss
+++ b/components/TextBlock.module.scss
@@ -1,14 +1,32 @@
 @use 'library'as lib;
 
-.titleBlock {
-	margin-bottom: .5em;
-	font-size: 1.3em;
+.root {
+	margin-bottom: 1em;
+	max-width: 95vw;
+
+	@media(max-width: 800px) {
+		overflow-x: scroll;
+	}
 }
 
-.root {
+.titleBlock {
+	font-size: 1.4em;
+}
+
+.descriptionBlock {
+	font-size: 1em;
+	white-space: pre-line;
+	margin-top: .3em;
+	margin-bottom: .3em;
+}
+
+.textBlock {
+	// max-width: 100%;
+	font-size: .9em;
 	background-color: rgb(30, 30, 30);
 	display: inline-flex;
 	flex-direction: column;
+	margin-top: .5em;
 	padding: 1.4em 1.1em;
 	border-radius: .3em;
 	border-left: .1em solid rgba(lib.$neon_values, 0.5);
@@ -17,6 +35,7 @@
 }
 
 .copyButtonContainer {
+	user-select: none;
 	position: absolute;
 	top: .35em;
 	right: .35em;
