--- a/components/TextBlock.module.scss
+++ b/components/TextBlock.module.scss
@@ -34,6 +34,15 @@
 	position: relative;
 }
 
+.highlightedVariable {
+	color: rgb(0, 210, 210);
+}
+
+.highlightedType {
+	color: lib.$neon
+}
+
+
 .copyButtonContainer {
 	user-select: none;
 	position: absolute;
