dont break lines

--- a/components/TextBlock.module.scss
+++ b/components/TextBlock.module.scss
@@ -30,7 +30,7 @@
 	padding: 1.4em 1.1em;
 	border-radius: .3em;
 	border-left: .1em solid rgba(lib.$neon_values, 0.5);
-	white-space: pre-wrap;
+	white-space: pre;
 	position: relative;
 }
 
