--- a/components/TextBlock.module.scss
+++ b/components/TextBlock.module.scss
@@ -3,10 +3,6 @@
 .root {
 	margin-bottom: 1em;
 	max-width: 95vw;
-
-	@media(max-width: 800px) {
-		overflow-x: scroll;
-	}
 }
 
 .titleBlock {
@@ -20,18 +16,23 @@
 	margin-bottom: .3em;
 }
 
-.textBlock {
-	// max-width: 100%;
-	font-size: .9em;
-	background-color: rgb(30, 30, 30);
-	display: inline-flex;
-	flex-direction: column;
+.textBlockContainer {
+	position: relative;
 	margin-top: .5em;
 	padding: 1.4em 1.1em;
+	background-color: rgb(30, 30, 30);
 	border-radius: .3em;
 	border-left: .1em solid rgba(lib.$neon_values, 0.5);
+}
+
+.textBlock {
+	max-width: 100%;
+	font-size: .9em;
+	display: inline-flex;
+	flex-direction: column;
+	overflow-x: auto;
 	white-space: pre;
-	position: relative;
+
 }
 
 .highlightedVariable {
