--- a/components/docs_page/DocsContent.module.scss
+++ b/components/docs_page/DocsContent.module.scss
@@ -14,6 +14,10 @@
 	min-width: clamp(300px, 80%, 1400px)
 }
 
+.sectionBlockContainer {
+	padding-top: 100px;
+}
+
 .sectionTitle {
 	font-size: 2em;
 }
@@ -22,7 +26,7 @@
 	font-size: 1.3em;
 }
 
-.sectionBlockContainer {
+.textBlock {
 	margin-top: 2em;
 	margin-bottom: 3em;
 }
