--- a/components/docs_page/DocsContent.module.scss
+++ b/components/docs_page/DocsContent.module.scss
@@ -14,11 +14,10 @@
 	min-width: clamp(300px, 80%, 1400px)
 }
 
-.sectionBlockContainer {
-	padding-top: 100px;
-}
+.sectionBlockContainer {}
 
 .sectionTitle {
+	padding-top: 100px;
 	font-size: 2em;
 }
 
