--- a/components/docs_page/DocsContent.module.scss
+++ b/components/docs_page/DocsContent.module.scss
@@ -16,6 +16,9 @@
 
 .sectionBlockContainer {}
 
+.sectionGroup{
+	margin-top: 2em;
+}
 .sectionTitle {
 	padding-top: 100px;
 	font-size: 2em;
@@ -26,6 +29,9 @@
 }
 
 .textBlock {
-	margin-top: 2em;
 	margin-bottom: 3em;
+
+	&.withLink {
+		margin-bottom: 0;
+	}
 }
