--- a/components/TextBlock.module.scss
+++ b/components/TextBlock.module.scss
@@ -20,6 +20,7 @@
 	position: relative;
 	margin-top: .5em;
 	padding: 1.3em 1.1em;
+	padding-right: calc(min(1.15em, 30px) + .7em);
 	background-color: rgb(30, 30, 30);
 	border-radius: .3em;
 	border-left: .1em solid rgba(lib.$neon_values, 0.5);
