--- a/components/TextBlock.module.scss
+++ b/components/TextBlock.module.scss
@@ -19,7 +19,7 @@
 .textBlockContainer {
 	position: relative;
 	margin-top: .5em;
-	padding: 1.3em 1.1em;
+	padding: .7em 1.1em;
 	padding-right: calc(min(1.15em, 30px) + .7em);
 	background-color: rgb(30, 30, 30);
 	border-radius: .3em;
