--- a/components/image_link/ImageLink.module.scss
+++ b/components/image_link/ImageLink.module.scss
@@ -1,10 +1,11 @@
-@use 'library'as lib;
+@use './../library'as lib;
 
 .root {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	user-select: none;
 	cursor: default;
 }
 
